# Lissue

./: .gitignore  Cargo.toml  LICENSE-MIT  README.ja.md  README.md
.mytodo/: config.yaml  tasks.json
demo/: .gitignore
docs/: TUI_specs.md  cli_demo.gif   performance_report.md  specs.md
src/: lib.rs  main.rs
src/domain/: config.rs  mod.rs  repository.rs  task.rs
src/infrastructure/: config.rs  json.rs  mod.rs  sqlite.rs
src/presentation/: cli.rs  format.rs  mod.rs
src/presentation/tui/: layout.rs  mod.rs  widgets.rs
src/usecase/: mod.rs  todo.rs
tests/: cli_tests.rs  performance.rs
