[package]
name = "lissue"
version = "0.1.1"
authors = ["Morishita-mm <183205013+Morishita-mm@users.noreply.github.com>"]
edition = "2024"
description = "A local TODO CLI for project management with SQLite and Git-friendly JSON storage"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Morishita-mm/rust-todo-cli"
readme = "README.md"
keywords = ["todo", "cli", "productivity", "git", "sqlite"]
categories = ["command-line-utilities"]

[[bin]]
name = "lissue"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
rusqlite = { version = "0.31", features = ["bundled", "uuid", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
uuid = { version = "1.8", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
tempfile = "3.10"
walkdir = "2.5"
lexiclean = "0.0.1"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
